--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -32,11 +32,15 @@
     </style>
 </head>
 <body>
+    <!-- Input field for height-->
+    <input type="text" id="userInput" placeholder="Enter value">
+    <button id="startProcess">Start Process</button>
+
     <h1 style="text-align:center;">BodyPix Video Stream</h1>
     <h2 id="shoulderResult" style="text-align:center;">Shoulder: 0 cm</h2>
-    <h2 id="chestResult" style="text-align:center;">Chest: 0 cm</h2>
+    <h2 id="torsoResult" style="text-align:center;">Torso: 0 cm</h2>
     <h2 id="display-result-shoulder" style="text-align:center; display: none;"></h2>
-    <h2 id="display-result-chest" style="text-align:center; display: none;"></h2>
+    <h2 id="display-result-torso" style="text-align:center; display: none;"></h2>
     <div id="container">
         <video id="video" autoplay></video>
         <canvas id="output" width="640" height="480"></canvas>
