(feat): add example size suggestions

--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -41,6 +41,7 @@
     <h2 id="torsoResult" style="text-align:center;">Torso: 0 cm</h2>
     <h2 id="display-result-shoulder" style="text-align:center; display: none;"></h2>
     <h2 id="display-result-torso" style="text-align:center; display: none;"></h2>
+    <h2 id="display-cloth-result" style="text-align:center; display: none;"></h2>
     <div id="container">
         <video id="video" autoplay></video>
         <canvas id="output" width="640" height="480"></canvas>
